[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true

[tool.poetry]
name = "qb-tool"
version = "0.1.0"
description = "qb-tool allows you to automate various qBittorrent tasks by using it's web api."
authors = ["Dobatymo"]
license = "ISC license"

[tool.poetry.dependencies]
python = "^3.7"
qbittorrent-api = "^2022.5.32"
requests = "^2.28.0"
appdirs = "^1.4.4"
"bencode.py" = "^4.0.0"
genutility = "^0.0.85"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
